--- a/src/assets/styles/normalize.css
+++ b/src/assets/styles/normalize.css
@@ -24,6 +24,15 @@ pre {
 
 a {
   background-color: transparent;
+  text-decoration: none;
+  color: inherit;
+  transition: 0.3s all ease;
+}
+
+ul, li {
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
 
 abbr[title] {
