--- a/src/assets/styles/theme.css
+++ b/src/assets/styles/theme.css
@@ -3,7 +3,7 @@
 
    --primary: #41A4DF;
    --primaryDark: #297EE2;
-   --secondary: #DCE6F2;
+   --secondary: #E5F0FC;
    --secondaryDark: #D8E8F2;
 
    --textPrimary: #0D0D12;
