--- a/src/components/Header/styles.module.css
+++ b/src/components/Header/styles.module.css
@@ -4,6 +4,13 @@
 
 .wrap {
     display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.logo {
+    width: 64px;
+    height: 64px;
 }
 
 .menu ul {
