--- a/src/assets/styles/theme.css
+++ b/src/assets/styles/theme.css
@@ -31,3 +31,27 @@ html {
 * {
     box-sizing: border-box;
 }
+
+h1 {
+    font-size: 80px;
+}
+
+h2 {
+    font-size: 56px;
+}
+
+h3 {
+    font-size: 42px;
+}
+
+h4 {
+    font-size: 34px;
+}
+
+h5 {
+    font-size: 28px;
+}
+
+h6 {
+    font-size: 24px;
+}
