--- a/src/assets/styles/theme.css
+++ b/src/assets/styles/theme.css
@@ -26,10 +26,7 @@ html {
     font-size: var(--fs);
     font-family: "Inter", sans-serif;
     color: var(--textPrimary);
-}
-
-* {
-    box-sizing: border-box;
+    line-height: 1.2;
 }
 
 h1 {
