--- a/src/assets/styles/theme.css
+++ b/src/assets/styles/theme.css
@@ -52,3 +52,33 @@ h5 {
 h6 {
     font-size: 24px;
 }
+
+@media only screen and (max-width: 600px) {
+    :root {
+        --fs: 18px;
+    }
+
+    h1 {
+        font-size: 46px;
+    }
+    
+    h2 {
+        font-size: 32px;
+    }
+    
+    h3 {
+        font-size: 28px;
+    }
+    
+    h4 {
+        font-size: 24px;
+    }
+    
+    h5 {
+        font-size: 22px;
+    }
+    
+    h6 {
+        font-size: 18px;
+    }
+}
