--- a/src/components/Header/styles.module.css
+++ b/src/components/Header/styles.module.css
@@ -22,3 +22,16 @@
 .menu ul > li > a:hover {
     color: var(--primary);
 }
+
+@media only screen and (max-width: 900px) {
+    .menu {
+        display: none;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .logo {
+        width: 46px;
+        height: 46px;
+    }
+}
