--- a/src/components/ButtonLink/styles.module.css
+++ b/src/components/ButtonLink/styles.module.css
@@ -1,4 +1,5 @@
 .link {
+    text-align: center;
     border-radius: calc(var(--uint) * 4);
     padding: calc(var(--uint) * 2) calc(var(--uint) * 4);
 }
