--- a/src/assets/styles/fonts.css
+++ b/src/assets/styles/fonts.css
@@ -3,6 +3,7 @@
     src: url("../fonts/Inter-Thin.ttf") format("truetype");
     font-style: normal;
     font-weight: 100;
+    font-display: swap;
 }
 
 @font-face {
@@ -10,6 +11,7 @@
     src: url("../fonts/Inter-ExtraLight.ttf") format("truetype");
     font-style: normal;
     font-weight: 200;
+    font-display: swap;
 }
 
 @font-face {
@@ -17,6 +19,7 @@
     src: url("../fonts/Inter-Light.ttf") format("truetype");
     font-style: normal;
     font-weight: 300;
+    font-display: swap;
 }
 
 @font-face {
@@ -24,6 +27,7 @@
     src: url("../fonts/Inter-Regular.ttf") format("truetype");
     font-style: normal;
     font-weight: 400;
+    font-display: swap;
 }
 
 @font-face {
@@ -31,6 +35,7 @@
     src: url("../fonts/Inter-Medium.ttf") format("truetype");
     font-style: normal;
     font-weight: 500;
+    font-display: swap;
 }
 
 @font-face {
@@ -38,6 +43,7 @@
     src: url("../fonts/Inter-SemiBold.ttf") format("truetype");
     font-style: normal;
     font-weight: 600;
+    font-display: swap;
 }
 
 @font-face {
@@ -45,6 +51,7 @@
     src: url("../fonts/Inter-Bold.ttf") format("truetype");
     font-style: normal;
     font-weight: 700;
+    font-display: swap;
 }
 
 @font-face {
@@ -52,6 +59,7 @@
     src: url("../fonts/Inter-ExtraBold.ttf") format("truetype");
     font-style: normal;
     font-weight: 800;
+    font-display: swap;
 }
 
 @font-face {
@@ -59,4 +67,5 @@
     src: url("../fonts/Inter-Black.ttf") format("truetype");
     font-style: normal;
     font-weight: 900;
+    font-display: swap;
 }
