--- a/src/assets/styles/theme.css
+++ b/src/assets/styles/theme.css
@@ -65,6 +65,10 @@ h6 {
     font-size: 24px;
 }
 
+section {
+    padding: calc(var(--uint) * 12) 0;
+}
+
 @media only screen and (max-width: 600px) {
     :root {
         --fs: 18px;
@@ -92,5 +96,9 @@ h6 {
     
     h6 {
         font-size: 18px;
+    }
+
+    section {
+        padding: calc(var(--uint) * 6) 0;
     }
 }
