--- a/src/assets/styles/theme.css
+++ b/src/assets/styles/theme.css
@@ -1,20 +1,20 @@
 :root {
-   --uint: 8px;
+    --uint: 8px;
 
-   --primary: #41A4DF;
-   --primaryDark: #297EE2;
-   --secondary: #E5F0FC;
-   --secondaryDark: #D8E8F2;
+    --primary: #41A4DF;
+    --primaryDark: #297EE2;
+    --secondary: #E5F0FC;
+    --secondaryDark: #D8E8F2;
 
-   --textHead: #0D0D12;
-   --textPrimary: #111111;
-   --textSecondary: #FFFFFF;
+    --textHead: #0D0D12;
+    --textPrimary: #111111;
+    --textSecondary: #FFFFFF;
 
-   --bgPrimary: #fff;
-   --bgPrimaryDark: #F7F9FB;
-   --bgSecondary: #232328;
+    --bgPrimary: #fff;
+    --bgPrimaryDark: #F7F9FB;
+    --bgSecondary: #232328;
 
-   --gradient: linear-gradient(233deg, #9FCCFA -20.48%, #0974F1 97.38%);
+    --gradient: linear-gradient(233deg, #9FCCFA -20.48%, #0974F1 97.38%);
 
     --fs: 20px;
 }
@@ -34,11 +34,18 @@ html {
 
 h1,
 h2,
-h3
-h4,
+h3 h4,
 h5,
 h6 {
     color: var(--textHead);
+}
+
+h1 span,
+h2 span,
+h3 span h4 span,
+h5 span,
+h6 span {
+    color: var(--primary);
 }
 
 h1 {
@@ -77,23 +84,23 @@ section {
     h1 {
         font-size: 46px;
     }
-    
+
     h2 {
         font-size: 32px;
     }
-    
+
     h3 {
         font-size: 28px;
     }
-    
+
     h4 {
         font-size: 24px;
     }
-    
+
     h5 {
         font-size: 22px;
     }
-    
+
     h6 {
         font-size: 18px;
     }
