--- a/src/assets/styles/theme.css
+++ b/src/assets/styles/theme.css
@@ -25,6 +25,7 @@ body {
 }
 
 html {
+    scroll-behavior: smooth;
     overflow-x: hidden;
     font-size: var(--fs);
     font-family: "Inter", sans-serif;
