--- a/src/assets/styles/theme.css
+++ b/src/assets/styles/theme.css
@@ -35,7 +35,8 @@ html {
 
 h1,
 h2,
-h3 h4,
+h3,
+h4,
 h5,
 h6 {
     color: var(--textHead);
@@ -43,7 +44,8 @@ h6 {
 
 h1 span,
 h2 span,
-h3 span h4 span,
+h3 span,
+h4 span,
 h5 span,
 h6 span {
     color: var(--primary);
