--- a/src/assets/styles/theme.css
+++ b/src/assets/styles/theme.css
@@ -117,6 +117,7 @@ section {
 @media only screen and (max-width: 600px) {
     :root {
         --fs: 18px;
+        --fsSmall: 14px;
     }
 
     h1 {
