--- a/src/sections/QuickStart/styles.module.css
+++ b/src/sections/QuickStart/styles.module.css
@@ -2,7 +2,7 @@
     background-color: var(--bgPrimaryDark);
 }
 
-.head {
+.title {
     text-align: center;
 }
 
@@ -137,7 +137,7 @@
 }
 
 
-.date {
+.messageDate {
     margin-top: calc(var(--uint) * 0.5);
     text-align: right;
     opacity: 0.4;
