--- a/src/components/Header/ThemeChanger/styles.module.css
+++ b/src/components/Header/ThemeChanger/styles.module.css
@@ -1,6 +1,6 @@
 .root {
-    width: 40px;
-    height: 40px;
+    width: 46px;
+    height: 46px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -9,6 +9,11 @@
     outline: none;
     background: none;
     cursor: pointer;
+    transition: 0.3s all ease;
+}
+
+.root:hover {
+    background: var(--select);
 }
 
 .root img {
@@ -19,6 +24,20 @@
 }
 
 @media only screen and (max-width: 600px) {
+    .root {
+        width: 40px;
+        height: 40px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 50%;
+        border: none;
+        outline: none;
+        background: none;
+        cursor: pointer;
+        transition: 0.3s all ease;
+    }
+
     .root img {
         width: 24px;
         height: 24px;
