--- a/src/sections/Features/Exchange/styles.module.css
+++ b/src/sections/Features/Exchange/styles.module.css
@@ -12,12 +12,11 @@
 }
 
 .coins img {
-    position: relative;
+    border-radius: 50%;
+    border: 4px solid var(--bgPrimary);
 }
 
 .coins img:not(:first-of-type){
-    border-radius: 50%;
-    border: 3px solid white;
     position: absolute;
 }
 
