--- a/src/assets/styles/theme.css
+++ b/src/assets/styles/theme.css
@@ -18,9 +18,14 @@
     --select: rgba(0,0,0,0.04);
 
     --gradient: linear-gradient(233deg, #9FCCFA -20.48%, #0974F1 97.38%);
+    --gradientCase1: linear-gradient(340deg, #FAACA8 8.42%, #DDD6F3 91.45%);
+    --gradientCase2: linear-gradient(207deg, #FCB69F 6.91%, #FFECD2 92.45%);
+    --gradientCase3: linear-gradient(0deg, #C2E9FB -16.6%, #A1C4FD 106.15%);
     --gradientStep1: linear-gradient(297deg, #8EC5FC 8.25%, #E0C3FC 91.76%);
     --gradientStep2: linear-gradient(207deg, #FCB69F 6.91%, #FFECD2 92.45%);
     --gradientStep3: linear-gradient(0deg, #C2E9FB -16.6%, #A1C4FD 106.15%);
+
+    --gradientButton: linear-gradient(233deg, #9FCCFA -20.48%, #0974F1 97.38%);
 
     --stepButton: #8198D1;
 
