--- a/src/assets/styles/theme.css
+++ b/src/assets/styles/theme.css
@@ -31,6 +31,7 @@
     --graidentMessageWrap: linear-gradient(233deg, #9FCCFA -20.48%, #0974F1 97.38%);
 
     --stepButton: #8198D1;
+    --tgButton: rgba(54,136,194,0.8);
 
     --codeBlue: #5DB0E2;
     --codeYellow: #FCEF8F;
