--- a/src/sections/UseCases/Slide3/MessageImage/styles.module.css
+++ b/src/sections/UseCases/Slide3/MessageImage/styles.module.css
@@ -1,6 +1,17 @@
 .root {
     display: flex;
     flex-direction: column;
-    gap: calc(var(--uint) * 0.5);
+    gap: calc(var(--uint) * 1);
     width: 100%;
+}
+
+.wrap {
+    position: relative;
+}
+
+.icon {
+    position: absolute;
+    bottom: -28px;
+    right: 50%;
+    transform: translateX(50%);
 }
