--- a/src/sections/Features/Cryptocurrencies/styles.module.css
+++ b/src/sections/Features/Cryptocurrencies/styles.module.css
@@ -16,6 +16,90 @@
     text-align: center;
 }
 
+.currencies li > img {
+    animation: Zoom 8s linear infinite;
+}
+
+.currencies li > p {
+    animation: Opacity 8s linear infinite;
+}
+
+.currencies > li:nth-child(1) img,
+.currencies > li:nth-child(1) p {
+    animation-delay: 0s;
+}
+
+.currencies > li:nth-child(2) img,
+.currencies > li:nth-child(2) p {
+    animation-delay: 0.3s;
+}
+
+.currencies > li:nth-child(3) img,
+.currencies > li:nth-child(3) p {
+    animation-delay: 0.6s;
+}
+
+.currencies > li:nth-child(4) img,
+.currencies > li:nth-child(4) p {
+    animation-delay: 0.9s;
+}
+
+.currencies > li:nth-child(5) img,
+.currencies > li:nth-child(5) p {
+    animation-delay: 1.2s;
+}
+
+.currencies > li:nth-child(6) img,
+.currencies > li:nth-child(6) p {
+    animation-delay: 1.5s;
+}
+
+.currencies > li:nth-child(7) img,
+.currencies > li:nth-child(7) p {
+    animation-delay: 1.8s;
+}
+
+.currencies > li:nth-child(8) img,
+.currencies > li:nth-child(8) p {
+    animation-delay: 2.1s;
+}
+
+@keyframes Opacity { 
+    0% {
+       opacity: 0.5;
+    }
+    47% {
+       opacity: 0.5;
+    }
+    50% {
+        opacity: 1;
+    }
+    53% {
+        opacity: 0.5;
+      }
+    100% {
+        opacity: 0.5;
+    }
+}
+
+@keyframes Zoom { 
+    0% {
+      transform: scale(1);
+    }
+    47% {
+      transform: scale(1);
+    }
+    50% {
+        transform: scale(1.08);
+    }
+    53% {
+        transform: scale(1);
+      }
+    100% {
+      transform: scale(1);
+    }
+  }
+
 .currencies li img {
     width: 96px;
     height: 96px;
@@ -23,13 +107,9 @@
 
 .currencies li p {
     margin-top: calc(var(--uint) * 1);
-    opacity: 0.4;
+    opacity: 0.5;
     font-size: var(--fsBigSmall);
     font-weight: 500;
-}
-
-[data-theme='dark'] .currencies li p {
-    opacity: 0.8;
 }
 
 @media only screen and (max-width: 1200px) {
