--- a/src/sections/Features/OneClick/styles.module.css
+++ b/src/sections/Features/OneClick/styles.module.css
@@ -12,13 +12,66 @@
     width: 100%;
     padding: calc(var(--uint) * 2) calc(var(--uint) * 3);
     border-radius: calc(var(--uint) * 2);
+    animation: Click 8s linear infinite;
 }
 
 .cursor {
     position: absolute;
     right: -45px;
     bottom: -40px;
+    animation: Move 8s linear infinite;
 }
+
+@keyframes Click {
+    0% {
+        transform: scale(1);
+    }
+    35% {
+        transform: scale(1);
+    }
+    38% {
+        transform: scale(1);
+    }
+    40% {
+        transform: scale(1.1);
+    }
+    42% {
+        transform: scale(1.1);
+    }
+    44% {
+        transform: scale(1);
+    }
+    100% {
+        transform: scale(1);
+      }
+  }
+
+@keyframes Move {
+    0% {
+        right: -45px;
+        bottom: -40px;
+    }
+    15% {
+        right: -45px;
+        bottom: -40px;
+    }
+    25% {
+        right: -15px;
+        bottom: -25px;
+    }
+    30% {
+        right: -15px;
+        bottom: -25px;
+    }
+    35% {
+        right: -45px;
+        bottom: -40px;
+    }
+    100% {
+        right: -45px;
+        bottom: -40px;
+      }
+  }
 
 @media only screen and (max-width: 600px) {
     .buttonWrap {
