--- a/src/assets/styles/theme.css
+++ b/src/assets/styles/theme.css
@@ -32,6 +32,7 @@
 
     --stepButton: #8198D1;
     --tgButton: rgba(54,136,194,0.8);
+    --tgButtonSelect: rgba(24,109,169,0.9);
     --tgButton1: #96ADC6;
 
     --codeBlue: #5DB0E2;
